--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 form {
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 10% auto auto auto;
     text-align: left;
     background-color: #9cdeb9;
     width: 450px;
